--- a/kadai_008/kadai_008.ipynb
+++ b/kadai_008/kadai_008.ipynb
@@ -41,41 +41,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "r3Mw5J6drJGV",
-        "outputId": "ed8ea3da-b358-4276-cf31-98e12c954392"
+        "outputId": "5d15ae96-577b-4010-93a2-8c14de4cdc39"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fizz\n",
-            "36\n"
+            "FizzBuzz\n"
           ]
         }
       ],
       "source": [
         "import random\n",
         "\n",
-        "var = random.randint(0, 100)\n",
+        "var = random.randint(1, 100)\n",
         "\n",
         "\n",
         "if var % 3 == 0 and var % 5 != 0 and var != 0 :\n",
         "  print(\"Fizz\")\n",
-        "  print(var)\n",
         "\n",
         "elif var % 5 == 0 and var % 3 != 0 and var != 0 :\n",
         "  print(\"Buzz\")\n",
-        "  print(var)\n",
         "\n",
         "elif var % 5 == 0 and var % 3 == 0 and var != 0 :\n",
         "  print(\"FizzBuzz\")\n",
-        "  print(var)\n",
         "\n",
         "else :\n",
         "  print(var)"
