--- a/kadai_008/kadai_008.ipynb
+++ b/kadai_008/kadai_008.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,15 +63,14 @@
         "\n",
         "var = random.randint(1, 100)\n",
         "\n",
+        "if var % 5 == 0 and var % 3 == 0 :\n",
+        "  print(\"FizzBuzz\")\n",
         "\n",
-        "if var % 3 == 0 and var % 5 != 0 and var != 0 :\n",
+        "elif var % 3 == 0 :\n",
         "  print(\"Fizz\")\n",
         "\n",
-        "elif var % 5 == 0 and var % 3 != 0 and var != 0 :\n",
+        "elif var % 5 == 0 :\n",
         "  print(\"Buzz\")\n",
-        "\n",
-        "elif var % 5 == 0 and var % 3 == 0 and var != 0 :\n",
-        "  print(\"FizzBuzz\")\n",
         "\n",
         "else :\n",
         "  print(var)"
